# atto-chat-server

./: Cargo.toml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
src/: application.rs  main.rs
src/infrastructure/: telemetry.rs
src/interface/http/: server.rs
tests/: main.rs
