[package]
name = "atto-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.19"
anyhow = "1.0.53"
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1.29"
tracing-actix-web = "0.5.0-beta.11"
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }

[dev-dependencies]
reqwest = "0.11.9"
